--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ python:
   - "3.5-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
 # command to install dependencies
-install: "pip install -r myapp/requirements.txt"
+install: "pip install -r withoutbj/requirements.txt"
 # command to run tests
-script: python test.py
+script: setup.py test
 
 sudo: false
 cache: pip
